# minidb

./: .gitignore  CMakeLists.txt  fix-later.md  fixLater.md  main-test.cpp
debug/: debug.md  executor_debug.cpp  integration_debug.cpp  parser_debug.cpp  persistence_debug.cpp  storage_debug.cpp
docs/: design.md  learning.md  phases.md
include/: catalog.hpp  command.hpp  dispatcher.hpp  executor.hpp  result.hpp  shell.hpp
include/parser/: ast.hpp  parser.hpp  token.hpp  tokenizer.hpp
include/persistence/: binaryReader.hpp  binaryWriter.hpp  persistenceManager.hpp
include/storage/: table.hpp  types.hpp
src/: catalog.cpp  command.cpp  dispatcher.cpp  executor.cpp  main.cpp  result.cpp  shell.cpp
src/parser/: parser.cpp  tokenizer.cpp
src/persistence/: binaryReader.cpp  binaryWriter.cpp  persistenceManager.cpp
src/storage/: table.cpp  types.cpp
